--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 baseurl: '/'
 title: Someone's blog
 description: > #this means to ignore newlines until "nav_lists:"
-  Someone's Blog
+  Zhuhz's Blog
 
 nav_lists:
   - title: About
