--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 ## Base settings ##
 # url:  # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: '/'
-title: Someone's blog
+title: Zhuhz's Blog
 description: > #this means to ignore newlines until "nav_lists:"
   Zhuhz's Blog
 
